2001-09-11  Anders Carlsson  <andersca@gnu.org>

	* gnome-program.c (gnome_module_info_get_type): Update to use
	new api for g_boxed_type_register_static.

Fri Sep 07 14:38:07 2001  George Lebl <jirka@5z.com>

	* gnome-help.h: include gnome-program.h

2001-09-06  Anders Carlsson  <andersca@gnu.org>

	* libgnome-2.0.pc.in (Cflags): Use gnome-2.0/
	instead of gnome/2/

	* Makefile.am: Install libgnome.h in libgnomeui/
	and use gnome-2.0/ instead of gnome/2/

Tue Sep 04 19:12:15 2001  George Lebl <jirka@5z.com>

	* gnome-config.h: include gnome-init.h

Tue Sep 04 18:05:12 2001  George Lebl <jirka@5z.com>

	* gnome-config.h: use the getters for the user/private gnome_dir

2001-09-04  Martin Baulig  <baulig@suse.de>

	* gnome-i18n.c: #include <locale.h>.

2001-09-02  Anders Carlsson  <andersca@gnu.org>

	* gnome-program.h: Add G_END_DECLS.

Mon Sep 03 17:45:03 2001  George Lebl <jirka@5z.com>

	* gnome-i18nP.h: remove the config.h include from here, that
	  shouldn't be in other header files

	* gnome-marshal-main.c: include config.h

Mon Sep 03 03:33:20 2001  George Lebl <jirka@5z.com>

	* gnome-init.[ch]: add a bonobo module here

	* gnome-program.c: some doc fixes, a typo in a constant fixed, and
	  add simple init profiling info

Mon Sep 03 02:18:51 2001  George Lebl <jirka@5z.com>

	* gnome-gconf.c, gnome-init.c: get versions right

	* gnome-program.c: fixup gnome_program_get doc

Sun Sep 02 23:30:56 2001  George Lebl <jirka@5z.com>

	* gnome-exec.c, gnome-url.c: clean up headers a bit, and do lazy gconf init

	* gnome-gconf.[ch]:  Don't do all the init on init, but only when
	  something calls gnome_gconf_lazy_init

	* gnome-init.c: remove the bonobo stuff, init vfs after arguments are
	  parsed for bonobo-activation argument parsing to work right

	* gnome-program.[ch], gnome-gconf.[ch], gnome-init.[ch],
	  test-libgnome.c:  Make all the module info stuff into getters
	  rather then data pointers.  This makes the lib have no exported