@@ -1,3 +1,9 @@
+Fri Sep 14 12:33:21 2001  George Lebl <jirka@5z.com>
+
+	* Makefile.am, gnome-macros.h, gnome-program.c, libgnome.h: Move the
+	  gnome-macros foo to libgnome.  Also change it a bit so that it can
+	  actually deal with basic glib objects, and use it for GnomeProgram
+
 2001-09-11  Anders Carlsson  <andersca@gnu.org>
 
 	* gnome-program.c (gnome_module_info_get_type): Update to use
